force-app/main/default/objects/TDRSubentregable__c/fields/Subentregable__c.field-meta.xml
<CustomField>
    <fullName>Subentregable__c</fullName>
    <label>Entregable</label>
    <referenceTo>Subentregable__c</referenceTo>
    <relationshipLabel>Relaciones Entregables con TDR</relationshipLabel>
    <relationshipName>TDRsEntregables</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>