force-app/main/default/objects/TDRSubentregable__c/fields/TerminoReferencia__c.field-meta.xml
<CustomField>
    <fullName>TerminoReferencia__c</fullName>
    <label>Término de Referencia</label>
    <referenceTo>Termino_de_Referencia__c</referenceTo>
    <relationshipName>TDRsEntregables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>